# PeriodicPNM

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
claude/tutorials/basics/: 01_pybind11_basics.md  02_numpy_integration.md  03_openmp_parallelization.md  04_fh_algorithm.md  05_periodic_edt.md  06_memory_management.md  07_build_system.md
examples/: basic_edt_example.py
notebooks/: README.md
notebooks/exploratory/: .gitkeep
periodicpnm/: __init__.py  gaussian_filter.py  periodic_edt.cpp  periodic_edt.pyx
periodicpnm/filters/: __init__.py  gaussian_filter.py  maximum_filter.py
periodicpnm/generators/: __init__.py  gaussian_field.py
periodicpnm/periodic_edt/: __init__.py  periodic_edt.py  periodic_edt_cpp.cpp
tests/: __init__.py  test_periodic_edt.py
